...
    <string name="read_more">Read More</string>
    <string name="read_less">Read Less</string>
    <string name="movie">Movie</string>
    <string name="tv_show">TV Show</string>
    <string name="img_icon">Image Icon</string>
    <string name="img_bg">Image Background</string>
    <string name="favorite">Favorite</string>
    <string name="by_name">By Name</string>
    <string name="by_release">By Release</string>
    <string name="sorting">Sorting</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="empty_message">Data is empty</string>
...
